tests/shouldPass/j067d.c
_Atomic int f();

int main(void){

}
