tests/shouldFail/j303b.c
int a[5];
float a[5];

int main(void){
	return 0;
}
